<resources>
    <string name="app_name">RUMSChat</string>
    <string name="login">LOGIN</string>
    <string name="et_regNo">Registration Number</string>
    <string name="et_name">Name</string>
    <string name="et_email">Email</string>
    <string name="et_password">Password</string>
    <string name="tv_already_registered">Already Registered? Login</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="login_button">Login</string>
    <string name="register_text">Not a member? Register now</string>
    <string name="tv_register">REGISTER</string>
    <string name="register_button">Register</string>
    <string name="register_textView">TEST</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
